2001-12-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream.c (g_mime_stream_construct): 'type' is now an
	unsigned int rather than a signed int.

	* memchunk.c (memchunk_clean): Oops. Don't forget to free the tree
	after we're finished with it...

2001-12-18  Jeffrey Stedfast  <fejj@ximian.com>

	Various compiler warning fixes to several source files (mostly
	"unused variable" type stuff).

2001-12-17  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (datetok): reimplement to not use GLists
	(appending is slow) and also to not g_strndup the token, instead
	just remember it's offset and length so we can examine it later.
	(decode_int): New function to decode an int.
	(get_wday): Now takes an inlen argument.
	(get_mday): Same. Also calls decode_int.
	(get_month): Here too.
	(get_year): Again here... also calls decode_int.
	(get_tzone): Modified to use struct _date_token.
	(get_time): Completely rewritten.

2001-12-16  Jeffrey Stedfast  <fejj@ximian.com>

	* memchunk.[c,h]: A memchunk library similar to g_mem_chunk's but
	faster.

2001-12-16  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Added a --enable-warnings to turn on compiler
	warnings.

	* gmime-utils.c: Various compiler warning cleanup.

	* gmime-object.c (g_mime_object_construct): Change the type
	argument to be of type unsigned rather than int.

	* gmime-filter-html.c (url_extract): g_strndup takes an unsigned
	length argument.

	* gmime-filter-from.c (filter_filter): memcpy takes an unsigned
	length argument.

	* gmime-disposition.c (g_mime_disposition_new): g_strndup takes an
	unsigned length argument.

	* gmime-content-type.c (g_mime_content_type_new_from_string):
	g_strndup takes an unsigned length argument.

	* gmime-charset.c (g_mime_charset_init): g_strndup takes an
	unsigned length argument.

2001-12-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_destroy): Now an internal-only method.

	* gmime-message.c (g_mime_message_destroy): Now an internal-only